fix: wrong color use for bg

--- a/app/src/css/theme/dark.css
+++ b/app/src/css/theme/dark.css
@@ -1,7 +1,7 @@
 .toastui-editor-dark.toastui-editor-container {
   /* Define the global color and background */
   --toastui-editor-color: #fff;
-  --toastui-editor-bg-color: hsl(29, 10%, 17%);
+  --toastui-editor-bg-color: #212529;
   --toastui-editor-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.08);
   --toastui-editor-border-radius: .25rem;
 
